# pokemon-images.py

./: .envrc  .gitignore  Justfile  README.md  REUSE.toml  flake.nix  pyproject.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yaml  test.yaml
pokemon_images/: __init__.py  __main__.py  tests.py
