[tool.poetry]
name = "pokemon-images"
version = "1.0.0"
description = "Randomly get images of Pokémon from the official Pokémon website"
authors = ["Tomodachi94"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.ruff]
respect-gitignore = true
src = [ "pokemon_images" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
