[tool.poetry]
name = "pokemon-images"
version = "1.0.0"
description = "Randomly get images of Pokémon from the official Pokémon website"
authors = ["Tomodachi94"]
license = "MIT"
readme = "README.md"
urls = {
	"Homepage" = "https://github.com/tomodachi94/pokemon-images.py",
	"Source" = "https://github.com/tomodachi94/pokemon-images.py",
	"Bug Tracker" = "https://github.com/tomodachi94/pokemon-images.py/issues"
}

classifiers = [ "Topic :: Internet :: WWW/HTTP", "Topic :: Multimedia", "Topic :: Utilities", "Typing :: Typed" ]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.ruff]
respect-gitignore = true
src = [ "pokemon_images" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
